# ollama_chat_api

./: Cargo.toml  README.md
src/: main.rs
