[package]
name = "ollama_chat_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
ollama-rs = { version = "0.2.0", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = "0.1"  # 新增 tokio-stream 依赖项
anyhow = "1.0"        # 新增 anyhow 依赖项


